--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Message Effect !</title>
-	<link rel="stylesheet" type="text/css" href="blueBox/index.css">
+	<link rel="stylesheet" type="text/css" href="index.css">
 </head>
 <body id="body">
 	<div id="openMessage">
@@ -23,7 +23,7 @@
 
 </body>
 </html>
-<script src="../jquery.js"></script>
+<script src="jquery.js"></script>
 <script>
 	$(
 		function(){
